Fixed alignment with wide hints

--- a/piQRoss.css
+++ b/piQRoss.css
@@ -54,6 +54,7 @@ tr, td, th {
 	flex-wrap: wrap;
 	justify-content: flex-end;
 	text-align: center;
+	max-width: 18px;
 }
 
 #hintsH {
